[metadata]
name=gunwtiles
description=create tiles from JPL Aria GUNW
author = raul ramos
author_email = raul.ramos@udea.edu.co
licence = MIT
description_file=README.md
license_files=LICENSE.txt
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/rramosp/gunwtiles

